[gd_scene load_steps=37 format=3 uid="uid://vcwd04l1skbv"]

[ext_resource type="Texture2D" uid="uid://bei7x67psb4c4" path="res://assets/Main Characters/Mask Dude.png" id="1_3qydi"]
[ext_resource type="Script" uid="uid://6lwpqb3e6rmq" path="res://Scripts/player.gd" id="1_q3lat"]
[ext_resource type="Script" uid="uid://bncu8fljn2j8v" path="res://Scripts/camera_2d.gd" id="3_tok1r"]
[ext_resource type="Texture2D" uid="uid://6bsfvret8xj" path="res://assets/Items/Fruits/CherryIcon.png" id="4_3mea3"]
[ext_resource type="AudioStream" uid="uid://ba2hxqf376lg" path="res://assets/Sounds/Jump.ogg" id="4_8g4oa"]
[ext_resource type="Texture2D" uid="uid://ckaore37h130l" path="res://assets/Menu/UI/lifebar-1.png" id="4_dm7nj"]
[ext_resource type="Texture2D" uid="uid://53mh0rvj54b1" path="res://assets/Menu/UI/lifebar-2.png" id="5_3mea3"]
[ext_resource type="Texture2D" uid="uid://dan1h0xsyry1q" path="res://assets/Main Characters/Mask.png" id="5_3nb2p"]
[ext_resource type="AudioStream" uid="uid://bk01bmd5p2v58" path="res://assets/Sounds/Hit.ogg" id="5_6ysni"]
[ext_resource type="Script" uid="uid://btrwoms04r1yx" path="res://Scripts/StateMachine/stateMachine.gd" id="6_6ysni"]
[ext_resource type="Shader" uid="uid://bi6t40o14uve6" path="res://shaders/transitionShader.gdshader" id="7_8sa4y"]
[ext_resource type="Script" uid="uid://pc5pj3c5wl7v" path="res://Scripts/StateMachine/idle.gd" id="7_vlldt"]
[ext_resource type="Script" uid="uid://d3lxaaf4bnib6" path="res://Scripts/StateMachine/in_air.gd" id="8_j23h2"]
[ext_resource type="Script" uid="uid://k51vf007xvpg" path="res://Scripts/StateMachine/moving.gd" id="9_0j2ni"]
[ext_resource type="Script" uid="uid://bis06kbostk81" path="res://Scripts/StateMachine/take_damage.gd" id="10_0j2ni"]
[ext_resource type="Script" uid="uid://dwlg7theqc24w" path="res://Scripts/StateMachine/wall_slide.gd" id="11_v0k0e"]
[ext_resource type="Script" uid="uid://fo0h86bfcl82" path="res://Scripts/StateMachine/wall_jump.gd" id="12_5wa8t"]
[ext_resource type="Script" uid="uid://b81r1tpgpdyf1" path="res://Scripts/StateMachine/dash.gd" id="16_7v5gs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3lat"]
size = Vector2(19, 26)

[sub_resource type="Animation" id="Animation_tok1r"]
resource_name = "Idle"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.23333332, 0.33333334, 0.43333334, 0.53333336, 0.6333333, 0.73333335, 0.83333325, 0.93333334, 1.0333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_ddoul"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_j23h2"]
resource_name = "doubleJump"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.23333332, 0.33333334, 0.43333334, 0.53333336),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28, 29, 30]
}

[sub_resource type="Animation" id="Animation_vlldt"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_s1rgi"]
resource_name = "hurt"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42]
}

[sub_resource type="Animation" id="Animation_6ysni"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}

[sub_resource type="Animation" id="Animation_8g4oa"]
resource_name = "walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.23333333, 0.33333334, 0.43333334, 0.53333336, 0.6333333, 0.73333335, 0.8333333, 0.93333334, 1.0333333, 1.1333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_v0k0e"]
resource_name = "walkslide"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [31, 32, 33, 34, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s1rgi"]
_data = {
&"Idle": SubResource("Animation_tok1r"),
&"RESET": SubResource("Animation_ddoul"),
&"doubleJump": SubResource("Animation_j23h2"),
&"fall": SubResource("Animation_vlldt"),
&"hurt": SubResource("Animation_s1rgi"),
&"jump": SubResource("Animation_6ysni"),
&"walk": SubResource("Animation_8g4oa"),
&"walkslide": SubResource("Animation_v0k0e")
}

[sub_resource type="LabelSettings" id="LabelSettings_ddoul"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7v5gs"]
texture = ExtResource("4_dm7nj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8sa4y"]
texture = ExtResource("5_3mea3")
texture_margin_left = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3nb2p"]
shader = ExtResource("7_8sa4y")
shader_parameter/circle_size = 0.0
shader_parameter/screen_width = 640.0
shader_parameter/screen_height = 480.0

[sub_resource type="Animation" id="Animation_3nb2p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionColorRect:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8sa4y"]
resource_name = "Transition_Anim"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionColorRect:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.26666668),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d7xyo"]
_data = {
&"RESET": SubResource("Animation_3nb2p"),
&"Transition_Anim": SubResource("Animation_8sa4y")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0j2ni"]
size = Vector2(20, 26)

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_q3lat")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3qydi")
hframes = 11
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 3)
shape = SubResource("RectangleShape2D_q3lat")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_s1rgi")
}

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_tok1r")

[node name="PlayerGUI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerGUI"]
offset_top = 31.0
offset_right = 58.0
offset_bottom = 63.0

[node name="TextureRect" type="TextureRect" parent="PlayerGUI/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_3mea3")

[node name="Fruits2" type="Label" parent="PlayerGUI/HBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_ddoul")

[node name="HBoxContainer2" type="HBoxContainer" parent="PlayerGUI"]
offset_left = 71.0
offset_top = 32.0
offset_right = 129.0
offset_bottom = 64.0

[node name="TextureRect" type="TextureRect" parent="PlayerGUI/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("5_3nb2p")

[node name="Lifes" type="Label" parent="PlayerGUI/HBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_ddoul")

[node name="ProgressBar" type="ProgressBar" parent="PlayerGUI"]
offset_left = 4.0
offset_right = 154.0
offset_bottom = 40.0
theme_override_styles/background = SubResource("StyleBoxTexture_7v5gs")
theme_override_styles/fill = SubResource("StyleBoxTexture_8sa4y")
max_value = 10.0
step = 1.0
value = 1.0
show_percentage = false

[node name="TransitionColorRect" type="ColorRect" parent="PlayerGUI"]
process_mode = 3
process_priority = 1
material = SubResource("ShaderMaterial_3nb2p")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerGUI"]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_d7xyo")
}

[node name="RaycastDmg" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RaycastDmg"]
target_position = Vector2(0, 23)
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="RaycastDmg"]
position = Vector2(-7, 0)
target_position = Vector2(0, 23)
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="RaycastDmg"]
position = Vector2(7, 0)
target_position = Vector2(0, 23)
collision_mask = 2

[node name="AudioStreamJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8g4oa")

[node name="AudioStreamHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6ysni")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_6ysni")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("7_vlldt")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="InAir" type="Node" parent="StateMachine"]
script = ExtResource("8_j23h2")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="BufferJumpTimer" type="Timer" parent="StateMachine/InAir"]
wait_time = 0.1
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="StateMachine/InAir"]
wait_time = 0.2
one_shot = true

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource("9_0j2ni")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="TakeDamage" type="Node" parent="StateMachine"]
script = ExtResource("10_0j2ni")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="WallSlide" type="Node" parent="StateMachine"]
script = ExtResource("11_v0k0e")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="WallJump" type="Node" parent="StateMachine"]
script = ExtResource("12_5wa8t")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource("16_7v5gs")
anim_player_path = NodePath("../../AnimationPlayer")

[node name="DashTimer" type="Timer" parent="StateMachine/Dash"]
wait_time = 0.3
one_shot = true

[node name="areaToTakeDamage" type="Area2D" parent="." groups=["AreaPlayer"]]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaToTakeDamage"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_0j2ni")

[node name="WallSlide" type="Node2D" parent="."]

[node name="WallRayCastTop" type="RayCast2D" parent="WallSlide"]
position = Vector2(1, -8)
target_position = Vector2(18, 0)
collision_mask = 4

[node name="WallRayCastBottom" type="RayCast2D" parent="WallSlide"]
position = Vector2(1, 13)
target_position = Vector2(18, 0)
collision_mask = 4

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/TakeDamage" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="StateMachine/Dash/DashTimer" to="StateMachine/Dash" method="_on_dash_timer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
